Added odds GET method
